--- a/app/src/main/res/layout/fragment_sing_in.xml
+++ b/app/src/main/res/layout/fragment_sing_in.xml
@@ -23,6 +23,10 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/common_spacing"
+        android:layout_marginEnd="@dimen/common_spacing"
+        android:layout_marginTop="60dp"
+
         android:text="Вход в NMedia"
         android:textSize="30dp"
         android:layout_marginBottom="40dp"
@@ -37,8 +41,10 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:ems="10"
+        android:layout_marginTop="30dp"
         android:hint="Введите логин"
         android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="1.0"
@@ -53,6 +59,7 @@
         android:hint="Введите пароль"
         android:inputType="textPassword"
         android:textAlignment="center"
+        app:layout_constraintTop_toBottomOf="@+id/login"
         app:layout_constraintEnd_toEndOf="@+id/login"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/login"
